@startuml
'https://plantuml.com/class-diagram
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor #73c8df
skinparam classBackgroundColor MODEL_COLOR
skinparam classAttributeFontColor #FFFFFF
skinparam ArrowColor MODEL_COLOR
show members

class User {
  lastUpdated : LocalDate
}

class Age {
  age : int
}

class Bmi {
  weight : double
  height : double
  bmi : double
}

class Gender {
 gender : String
}

class IdealWeight {
 idealWeight : double
}

User --> Age
User --> Bmi
User --> Gender
User --> IdealWeight

@enduml
